[tool.poetry]
name = "parser-telegram"
version = "0.1.0"
description = ""
authors = ["Coriolanus <savvarabota@gmail.com>"]
readme = "README.md"
packages = [{include = "parser_telegram"}]

[tool.poetry.dependencies]
python = "^3.10"
Telethon = "^1.26.1"
DateTime = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
